--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Urbanist:ital,wght@1,800&display=swap" rel="stylesheet">
 
+
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
+
     <title>React App</title>
 
     <style>
